--- a/examples/index.html
+++ b/examples/index.html
@@ -12,7 +12,7 @@
     </div>
     <script src="../dist/redcube.js"></script>
     <script>
-        let name = localStorage.getItem('sample') || 'Box';
+        let name = localStorage.getItem('sample') || 'BrainStem';
         let canvas = document.getElementById('canvas');
         var samples = ['2CylinderEngine', 'Avocado', 'BarramundiFish', 'Box', 'BoxAnimated', 'BoxSemantics', 'BoxTextured', 'BoxWithoutIndices', 'BrainStem', 'Buggy', 'CesiumMan', 'CesiumMilkTruck', 'Duck', 'GearboxAssy', 'Monster', 'ReciprocatingSaw', 'RiggedFigure', 'RiggedSimple', 'SmilingFace', 'VC', 'WalkingLady'];
         var select = document.createElement('select');
