--- a/examples/index.html
+++ b/examples/index.html
@@ -4,49 +4,65 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <style type="text/css">
+        body {
+            margin: 0;
+        }
+        canvas {
+            width: 100%;
+            height: 100vh;
+            vertical-align: top;
+        }
+        #selector {
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    </style>
 </head>
 
 <body>
     <div>
-        <canvas id="canvas" width="750" height="500"></canvas>
+        <canvas id="canvas"></canvas>
+        <div id="selector"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.0/es6-promise.auto.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.js"></script>
     <script src="../dist/redcube.js"></script>
     <script>
-        let name = localStorage.getItem('sample') || 'BrainStem';
-        let canvas = document.getElementById('canvas');
-        var samples = ['2CylinderEngine', 'Avocado', 'BarramundiFish', 'Box', 'BoxAnimated', 'BoxSemantics', 'BoxTextured', 'BoxWithoutIndices', 'BrainStem', 'Buggy', 'CesiumMan', 'CesiumMilkTruck', 'Duck', 'GearboxAssy', 'Monster', 'ReciprocatingSaw', 'RiggedFigure', 'RiggedSimple', 'SmilingFace', 'VC', 'WalkingLady'];
-        var select = document.createElement('select');
+        const name = localStorage.getItem('sample') || 'BrainStem';
+        const canvas = document.getElementById('canvas');
+        const samples = ['2CylinderEngine', 'Avocado', 'BarramundiFish', 'Box', 'BoxAnimated', 'BoxSemantics', 'BoxTextured', 'BoxWithoutIndices', 'BrainStem', 'Buggy', 'CesiumMan', 'CesiumMilkTruck', 'Duck', 'GearboxAssy', 'Monster', 'ReciprocatingSaw', 'RiggedFigure', 'RiggedSimple', 'SmilingFace', 'VC', 'WalkingLady'];
+        const select = document.createElement('select');
         select.onchange = function() {
             localStorage.setItem('sample', select.value);
             window.location.reload();
         }
         samples.forEach(function(it) {
-            var option = document.createElement('option');
+            const option = document.createElement('option');
             option.innerHTML = it;
             option.value = it;
             select.appendChild(option);
         });
         select.value = name;
-        document.body.appendChild(select);
+        selector.appendChild(select);
 
-        let renderer = new redcube.RedCube('https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/1.0/' + name + '/glTF/' + name + '.gltf', canvas);
+        const renderer = new redcube.RedCube('https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/1.0/' + name + '/glTF/' + name + '.gltf', canvas);
         renderer.init().then(function() {
             if (renderer.cameras.length) {
-                var select = document.createElement('select');
+                const select = document.createElement('select');
                 select.onchange = function() {
                     renderer._camera = renderer.cameras.find(function(it) { 
                         return select.value === it.name; 
                     });
                 }
                 renderer.cameras.forEach(function(it) {
-                    var option = document.createElement('option');
+                    const option = document.createElement('option');
                     option.innerHTML = it.name;
                     option.value = it.name;
                     select.appendChild(option);
                 });
-                document.body.appendChild(select);
+                selector.appendChild(select);
             }
         });
     </script>
