--- a/examples/index.html
+++ b/examples/index.html
@@ -49,14 +49,14 @@
 
         const renderer = new redcube.RedCube('https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/1.0/' + name + '/glTF/' + name + '.gltf', canvas);
         renderer.init().then(function() {
-            if (renderer.cameras.length) {
+            if (renderer.parse.cameras.length) {
                 const select = document.createElement('select');
                 select.onchange = function() {
-                    renderer._camera = renderer.cameras.find(function(it) { 
+                    renderer._camera = renderer.parse.cameras.find(function(it) { 
                         return select.value === it.name; 
                     });
                 }
-                renderer.cameras.forEach(function(it) {
+                renderer.parse.cameras.forEach(function(it) {
                     const option = document.createElement('option');
                     option.innerHTML = it.name;
                     option.value = it.name;
