--- a/examples/index.html
+++ b/examples/index.html
@@ -31,6 +31,7 @@
         const name = localStorage.getItem('sample') || 'BrainStem';
         const canvas = document.getElementById('canvas');
         const samples = [
+        "pony_cartoon",
         "2CylinderEngine",
         "AnimatedCube",
         "AnimatedMorphCube",
