--- a/examples/index.html
+++ b/examples/index.html
@@ -31,6 +31,10 @@
         const name = localStorage.getItem('sample') || 'BrainStem';
         const canvas = document.getElementById('canvas');
         const samples = [
+        "ghost_rider_-_robbie_reyes",
+        "unicorn_in_a_glass_ball",
+        "pony_cartoon",
+        "zophrac",
         "2CylinderEngine",
         "AnimatedCube",
         "AnimatedMorphCube",
@@ -88,7 +92,10 @@
         select.value = name;
         selector.appendChild(select);
 
-        const renderer = new redcube.RedCube('https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/' + name + '/glTF/' + name + '.gltf', canvas);
+        const renderer = new redcube.RedCube('' + name + '/glTF/' + name + '.gltf', canvas, name === 'Avocado' || name === "WaterBottle" ? 0.01 : null);
+        if (name === "AnimatedMorphCube" || name === "AnimatedMorphSphere") {
+            renderer.z = 5;
+        }
         renderer.init().then(function() {
             if (renderer.parse.cameras.length) {
                 const select = document.createElement('select');
