--- a/examples/index.html
+++ b/examples/index.html
@@ -123,6 +123,7 @@
                     option.value = it.name;
                     select.appendChild(option);
                 });
+                select.value =  renderer.parse.cameras[ renderer.parse.cameras.length - 1].name;
                 selector.appendChild(select);
             }
         });
