--- a/examples/index.html
+++ b/examples/index.html
@@ -31,6 +31,7 @@
         const name = localStorage.getItem('sample') || 'BrainStem';
         const canvas = document.getElementById('canvas');
         const samples = [
+        "animated_hands",
         "ghost_rider_-_robbie_reyes",
         "unicorn_in_a_glass_ball",
         "pony_cartoon",
