--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <canvas id="canvas"></canvas>
         <div id="selector"></div>
     </div>
-    <script src="./redcube.js"></script>
+    <script src="./dist/redcube.js"></script>
     <script>
         const name = localStorage.getItem('sample') || 'BrainStem';
         const canvas = document.getElementById('canvas');
