add new test models and implement their features #

--- a/index.html
+++ b/index.html
@@ -32,141 +32,96 @@
     </div>
     <script src="./dist/redcube.js"></script>
     <script>
-        const name = localStorage.getItem('sample') || 'DamagedHelmet';
-        const canvas = document.getElementById('canvas');
-        const samples = [
-        "animated_hands",
-        "ghost_rider_-_robbie_reyes",
-        "unicorn_in_a_glass_ball",
-        "pony_cartoon",
-        "zophrac",
-        "2CylinderEngine",
-        "AnimatedCube",
-        "AnimatedMorphCube",
-        "AnimatedMorphSphere",
-        "AnimatedTriangle",
-        "Avocado",
-        "BarramundiFish",
-        "BoomBox",
-        "BoomBoxWithAxes",
-        "Box",
-        "BoxAnimated",
-        "BoxInterleaved",
-        "BoxTextured",
-        "BrainStem",
-        "Buggy",
-        "Cameras",
-        "CesiumMan",
-        "CesiumMilkTruck",
-        "Corset",
-        "Cube",
-        "DamagedHelmet",
-        "Duck",
-        "GearboxAssy",
-        "Lantern",
-        "MetalRoughSpheres",
-        "Monster",
-        "NormalTangentTest",
-        "ReciprocatingSaw",
-        "RiggedFigure",
-        "RiggedSimple",
-        "SciFiHelmet",
-        "SimpleMeshes",
-        "SimpleMorph",
-        "SimpleSparseAccessor",
-        "Suzanne",
-        "TextureCoordinateTest",
-        "TextureSettingsTest",
-        "Triangle",
-        "TriangleWithoutIndices",
-        "TwoSidedPlane",
-        "VC",
-        "WaterBottle"
-        ];
-        const select = document.createElement('select');
-        select.onchange = () => {
-            localStorage.setItem('sample', select.value);
-            window.location.reload();
-        }
-        samples.forEach((it) => {
-            const option = document.createElement('option');
-            option.innerHTML = it;
-            option.value = it;
-            select.appendChild(option);
-        });
-        select.value = name;
-        selector.appendChild(select);
-        ['bloom', 'ssao', 'shadow', 'light'].forEach(name => {
-            const checkbox = document.createElement('input');
-            checkbox.type = 'checkbox';
-            checkbox.title = name;
-            checkbox.checked = Boolean(localStorage.getItem(name));
-            checkbox.onchange = () => {
-                if (checkbox.checked) {
-                    localStorage.setItem(name, name);
-                } else {
-                    localStorage.removeItem(name);
-                }
-                window.location.reload();
-            };
-            selector.appendChild(checkbox);
-        });
-        const slider = document.createElement('input');
-        slider.oninput = () => {
-            renderer.light.update(Number(slider.value));
-            renderer.renderer.reflow = true;
-            renderer.renderer.needUpdateView = true;
-        };
-        slider.type = 'range';
-        slider.min = '0';
-        slider.max = `${Math.PI*2}`;
-        slider.step = '0.1';
-        slider.title = 'light';
-        selector.appendChild(slider);
-        slider.value = Math.PI/2;
-
-        const envname = localStorage.getItem('env') || 'env';
-        {
-            const select = document.createElement('select');
-            select.onchange = () => {
-                localStorage.setItem('env', select.value);
-                window.location.reload();
-            }
-            ['env', 'env1', 'env2'].forEach((it) => {
-                const option = document.createElement('option');
-                option.innerHTML = it;
-                option.value = it;
-                select.appendChild(option);
-            });
-            select.value = envname;
-            selector.appendChild(select);
-        }
-
-        //https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/
-        const renderer = new redcube.RedCube(
-            'https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/' + name + '/glTF/' + name + '.gltf', 
-            canvas, 
-            [localStorage.getItem('ssao'), localStorage.getItem('bloom'), localStorage.getItem('shadow'), localStorage.getItem('light')].filter(name => name),
-            envname
-        );
-        renderer.init(() => {
-            if (renderer.parse.cameras.length) {
+        fetch('https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/model-index.json')
+            .then(r => r.json())
+            .then(samples => {
+                const name = localStorage.getItem('sample') || 'DamagedHelmet';
+                const canvas = document.getElementById('canvas');
                 const select = document.createElement('select');
                 select.onchange = () => {
-                    renderer.ioc._updateDep('camera', renderer.parse.cameras.find((it) => { 
-                        return Number(select.value) === it.name; 
-                    }));
+                    localStorage.setItem('sample', select.value);
+                    window.location.reload();
                 }
-                renderer.parse.cameras.forEach((it) => {
+                samples.forEach((it) => {
                     const option = document.createElement('option');
                     option.innerHTML = it.name;
                     option.value = it.name;
                     select.appendChild(option);
                 });
-                select.value =  renderer.parse.cameras[ renderer.parse.cameras.length - 1].name;
+                select.value = name;
                 selector.appendChild(select);
-            }
-        });
+                ['bloom', 'ssao', 'shadow', 'light'].forEach(name => {
+                    const checkbox = document.createElement('input');
+                    checkbox.type = 'checkbox';
+                    checkbox.title = name;
+                    checkbox.checked = Boolean(localStorage.getItem(name));
+                    checkbox.onchange = () => {
+                        if (checkbox.checked) {
+                            localStorage.setItem(name, name);
+                        } else {
+                            localStorage.removeItem(name);
+                        }
+                        window.location.reload();
+                    };
+                    selector.appendChild(checkbox);
+                });
+                const slider = document.createElement('input');
+                slider.oninput = () => {
+                    renderer.light.update(Number(slider.value));
+                    renderer.renderer.reflow = true;
+                    renderer.renderer.needUpdateView = true;
+                };
+                slider.type = 'range';
+                slider.min = '0';
+                slider.max = `${Math.PI*2}`;
+                slider.step = '0.1';
+                slider.title = 'light';
+                selector.appendChild(slider);
+                slider.value = Math.PI/2;
+
+                const envname = localStorage.getItem('env') || 'env';
+                {
+                    const select = document.createElement('select');
+                    select.onchange = () => {
+                        localStorage.setItem('env', select.value);
+                        window.location.reload();
+                    }
+                    ['env', 'env1', 'env2'].forEach((it) => {
+                        const option = document.createElement('option');
+                        option.innerHTML = it;
+                        option.value = it;
+                        select.appendChild(option);
+                    });
+                    select.value = envname;
+                    selector.appendChild(select);
+                }
+
+                //https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/
+                window.renderer = new redcube.RedCube(
+                    'https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/' + name + '/glTF/' + name + '.gltf', 
+                    canvas, 
+                    [localStorage.getItem('ssao'), localStorage.getItem('bloom'), localStorage.getItem('shadow'), localStorage.getItem('light')].filter(name => name),
+                    envname
+                );
+                renderer.init(() => {
+                    if (renderer.parse.cameras.length) {
+                        const select = document.createElement('select');
+                        select.onchange = () => {
+                            renderer.ioc._updateDep('camera', renderer.parse.cameras.find((it) => { 
+                                return Number(select.value) === it.name; 
+                            }));
+                        }
+                        renderer.parse.cameras.forEach((it) => {
+                            const option = document.createElement('option');
+                            option.innerHTML = it.name;
+                            option.value = it.name;
+                            select.appendChild(option);
+                        });
+                        select.value =  renderer.parse.cameras[ renderer.parse.cameras.length - 1].name;
+                        selector.appendChild(select);
+                    }
+                });
+            });
     </script>
 </body>
 
